# neo4j-mcp

./: .env.example  .gitignore  AGENTIC_SEARCH_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MCP_CLIENT_GUIDE.md  README.md  TOOL_REFACTORING.md  debug_natural_query.py  mcp_app.md  mcp_inspector_test.md  neo4j-mcp-repomix.xml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  setup.sh
ai_docs/: repomix-output.xml
demo/: README.md  check_data.py  index.html  mcp-client.js  run_http_server.py  serve_demo.py  styles.css  test_demo.py  test_stdio_client.py  validate_demo.py
examples/: test_connection.py
specs/: fix-for-natural-query.md  mcp-server-testing-plan.md  neo4j-mcp-v1.md
src/mcp_server_neo4j_ehr/: __main__.py  server.py
src/mcp_server_neo4j_ehr/modules/: constants.py  data_types.py  db_connection.py
src/mcp_server_neo4j_ehr/modules/functionality/: get_clinical_notes.py  get_schema.py  list_diagnoses.py  list_lab_events.py  list_medications.py  list_procedures.py  natural_query.py  patient.py  search_notes.py
src/mcp_server_neo4j_ehr/tests/: README.md  conftest.py
src/mcp_server_neo4j_ehr/tests/functionality/: test_get_clinical_notes.py  test_get_schema.py  test_list_diagnoses.py  test_list_lab_events.py  test_list_medications.py  test_list_procedures.py  test_natural_query.py  test_patient.py  test_search_notes.py
tests/: README.md  test_server.py
